# multicall

./: .gitignore  Cargo.toml  NOTICE  README.md
.github/workflows/: Basic.yml  Lint.yml  Test.yml
artifacts/: checksums.txt  checksums_intermediate.txt  multicall.wasm
src/: bench.rs  contract.rs  error.rs  lib.rs  mock_querier.rs  msg.rs  querier.rs  test.rs  unit_test.rs
