[package]
name = "multicall"
version = "0.1.0"
authors = ["SCB10x"]
edition = "2022"
repository = "https://github.com/scb-10x/multicall"
description = "On-chain query aggregator/batcher in Terra"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.5
"""

[dependencies]
cosmwasm-std = { version = "0.16.5" }
cosmwasm-storage = { version = "0.16.5" }
cw-storage-plus = "0.9.1"
cw2 = "0.9.1"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.5" }
cosmwasm-vm = { version = "0.16.5" }
terra-cosmwasm = { version = "2.2.0" }
rand = "0.8.3"
base64 = "0.13.0"
test-case = "2.0.0"
